--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -18,7 +18,7 @@
 @layer components {
   // Container
   .container {
-    @apply w-full mx-auto px-4 sm:px-6;
+    @apply w-full mx-auto px-4 sm:px-6 lg:px-10 xl:px-14;
     max-width: var(--container-max);
   }
 
